--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
-name: Build and Sign AndroidAPS APK
+name: Build AndroidAPS APK
 
 on:
   push:
     branches:
       - main  # 当推送到 main 分支时触发
-  pull_request:
   workflow_dispatch:  # 支持手动触发
 
 jobs:
@@ -13,18 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 检出代码
-    - name: Checkout code
+    # Step 1: 检出代码
+    - name: Checkout Code
       uses: actions/checkout@v3
 
-    # 设置 JDK 环境
+    # Step 2: 设置 JDK 环境
     - name: Setup JDK
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: '17'
 
-    # 安装 Android SDK
+    # Step 3: 安装 Android SDK
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
       with:
@@ -32,40 +31,41 @@ jobs:
         build-tools: 33.0.2
         ndk: 23.1.7779620
 
-    # 授予权限
-    - name: Grant execute permission
+    # Step 4: 给予 gradlew 执行权限
+    - name: Grant Execute Permission
       run: chmod +x ./gradlew
 
-    # 构建未签名 APK
-    - name: Build unsigned APK
+    # Step 5: 构建 APK
+    - name: Build APK
       run: ./gradlew assembleRelease
 
-    # 安装签名工具
-    - name: Install signing tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install zipalign apksigner
-
-    # 签名 APK
-    - name: Sign APK
-      run: |
-        cd app/build/outputs/apk/release/
-        zipalign -v -p 4 app-release-unsigned.apk app-release-aligned.apk
-        apksigner sign --ks release-key.jks --ks-pass pass:789789Fty --ks-key-alias my-key-alias --key-pass pass:789789Fty --out app-release-signed.apk app-release-aligned.apk
-
-    # 上传签名的 APK
-    - name: Upload signed APK as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: Signed-AndroidAPS-APK
-        path: app/build/outputs/apk/release/app-release-signed.apk
-
-    # 打印生成的 APK 路径 (调试用)
-    - name: Debug APK path
+    # Step 6: 调试生成的 APK 路径
+    - name: Debug APK Path
       run: |
         echo "Listing APK files:"
-        find ./ -name "*.apk"
+        find . -name "*.apk"
 
-    # 上传 keystore 文件到环境
-    - name: Upload Keystore
-      run: echo "${{ secrets.KEYSTORE }}" | base64 --decode > release-key.jks
+    # Step 7: 签名 APK
+    - name: Sign APK
+      run: |
+        # 查找未签名的 APK 文件
+        APK_FILE=$(find . -name "*-release-unsigned.apk" | head -n 1)
+        if [ -z "$APK_FILE" ]; then
+          echo "Error: No unsigned APK found!"
+          exit 1
+        fi
+        echo "Found APK: $APK_FILE"
+        # 对 APK 文件进行对齐处理
+        zipalign -v -p 4 "$APK_FILE" app-release-aligned.apk
+        # 对 APK 文件进行签名
+        apksigner sign --ks release-key.jks --ks-pass pass:789789Fty --ks-key-alias my-key-alias --key-pass pass:789789Fty --out app-release-signed.apk app-release-aligned.apk
+      env:
+        APK_RELEASE_KEY_BASE64: ${{ secrets.APK_RELEASE_KEY_BASE64 }}
+        APK_RELEASE_KEY_PASSWORD: ${{ secrets.APK_RELEASE_KEY_PASSWORD }}
+
+    # Step 8: 上传签名后的 APK
+    - name: Upload Signed APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: Signed-APK
+        path: app-release-signed.apk
