--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,17 @@
+name: Build Android APK
+
+on:
+  push:
+    branches:
+      - main  # 当推送到 main 分支时触发
+  pull_request:
+    branches:
+      - main  # 当对 main 分支的 PR 时触发
+  workflow_dispatch:  # 允许手动触发工作流
+
 jobs:
   build:
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
