--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ name: Build Android APK
 on:
   push:
     branches:
-      - main  # 当推送到 main 分支时触发
+      - main
   pull_request:
     branches:
-      - main  # 当对 main 分支的 PR 时触发
-  workflow_dispatch:  # 允许手动触发工作流
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,6 +26,10 @@ jobs:
 
     - name: Install Android tools
       run: sudo apt-get install -y zipalign apksigner
+
+    - name: Decode and write keystore
+      run: |
+        echo "${{ secrets.RELEASE_KEY_BASE64 }}" | base64 -d > release-key.jks
 
     - name: Build APK
       run: ./gradlew assembleRelease
