--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   pull_request:
-    branches:
+      branches:
       - main
   workflow_dispatch:
 
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 确保克隆完整仓库
 
     - name: Setup JDK
       uses: actions/setup-java@v3
