--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # 拉取完整提交历史记录
+        fetch-depth: 0
 
     - name: Clean untracked files
       run: |
-        git reset --hard  # 重置到最新提交
-        git clean -fdx    # 删除未跟踪的文件和目录
+        git reset --hard HEAD
+        git clean -fdx
 
     - name: Setup JDK
       uses: actions/setup-java@v3
@@ -33,6 +33,9 @@ jobs:
 
     - name: Install Android tools
       run: sudo apt-get install -y zipalign apksigner
+
+    - name: Clean Gradle cache
+      run: rm -rf $HOME/.gradle/caches/
 
     - name: Set up signing key
       run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release-key.jks
