--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,10 @@ jobs:
       run: |
         echo "${{ secrets.KEYSTORE_FILE_BASE64 }}" | base64 -d > release-key-new.jks
 
+    - name: Validate Keystore
+      run: |
+        keytool -list -keystore release-key-new.jks -storepass ${{ secrets.KEYSTORE_PASSWORD }}
+
     - name: Clean Gradle cache
       run: rm -rf $HOME/.gradle/caches/
 
@@ -66,6 +70,10 @@ jobs:
           --key-pass pass:${{ secrets.KEY_PASSWORD }} \
           --out app-release-signed.apk \
           app-release-aligned.apk
+
+    - name: Debug Signed APK
+      run: |
+        jarsigner -verify -verbose -certs app-release-signed.apk
 
     - name: Upload APK as artifact
       uses: actions/upload-artifact@v3
