--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
-name: Build Android APK
+name: Build AndroidAPS APK
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -15,86 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 检出代码
     - name: Checkout code
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # 确保完整提交历史
 
-    # 清理未跟踪的文件
-    - name: Clean untracked files
-      run: |
-        git reset --hard HEAD  # 重置所有更改
-        git clean -fdx         # 清除未跟踪文件和目录
-
-    # 调试 Git 状态
-    - name: Debug Git status
-      run: git status          # 确保代码状态干净
-
-    # 设置 JDK 环境
     - name: Setup JDK
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: '17'
 
-    # 安装 Android 工具
-    - name: Install Android tools
-      run: sudo apt-get install -y zipalign apksigner
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 33
+        build-tools: 33.0.2
+        ndk: 23.1.7779620
 
-    # 解码 keystore 文件
-    - name: Decode Keystore
-      run: |
-        echo "${{ secrets.KEYSTORE_FILE_BASE64 }}" | base64 -d > release-key-new.jks
-        if [ ! -s release-key-new.jks ]; then
-          echo "Error: Decoded keystore file is empty!"
-          exit 1
-        fi
+    - name: Grant execute permission
+      run: chmod +x ./gradlew
 
-    # 验证 keystore 文件
-    - name: Validate Keystore
-      run: |
-        ls -lh release-key-new.jks
-        file release-key-new.jks
-        keytool -list -keystore release-key-new.jks -storepass ${{ secrets.KEYSTORE_PASSWORD }}
-
-    # 清理 Gradle 缓存
-    - name: Clean Gradle cache
-      run: rm -rf $HOME/.gradle/caches/
-
-    # 临时禁用自定义 Gradle 检查
-    - name: Disable custom Gradle check (temporary)
-      run: sed -i '/throw GradleException("There are uncommitted changes/ s/^/#/' app/build.gradle.kts
-
-    # 构建 APK
     - name: Build APK
       run: ./gradlew assembleRelease
 
-    # 签名 APK
-    - name: Sign APK
-      run: |
-        APK_FILE=$(find . -name "*-release-unsigned.apk" | head -n 1)
-        if [ -z "$APK_FILE" ]; then
-          echo "Error: No unsigned APK found!"
-          exit 1
-        fi
-        echo "Found APK: $APK_FILE"
-        zipalign -v -p 4 "$APK_FILE" app-release-aligned.apk
-        apksigner sign \
-          --ks release-key-new.jks \
-          --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} \
-          --ks-key-alias ${{ secrets.KEY_ALIAS }} \
-          --key-pass pass:${{ secrets.KEY_PASSWORD }} \
-          --out app-release-signed.apk \
-          app-release-aligned.apk
-
-    # 验证签名后的 APK
-    - name: Debug Signed APK
-      run: jarsigner -verify -verbose -certs app-release-signed.apk
-
-    # 上传签名后的 APK
     - name: Upload APK as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # 升级为 v4
       with:
-        name: signed-apk
-        path: app-release-signed.apk
+        name: AndroidAPS-APK
+        path: "**/outputs/apk/**/*.apk"
