--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build and Release APK
 on:
   push:
     tags:
-      - "*"  # 每次推送带有标签的代码时触发
-  workflow_dispatch: # 手动触发
+      - "*" # 当推送 Tag 时触发工作流
+  workflow_dispatch: # 手动触发工作流
 
 jobs:
   build:
@@ -22,11 +22,20 @@ jobs:
           java-version: "17"
           cache: "gradle"
 
-      # 构建未签名的 APK
+      # 构建 APK
       - name: Build APK
         run: ./gradlew assembleRelease --no-daemon
 
-      # 安装工具 (zipalign 和 apksigner)
+      # 检查 APK 路径是否存在
+      - name: Check APK Path
+        run: |
+          if [ ! -d "app/build/outputs/apk/release/" ]; then
+            echo "Release directory does not exist!"
+            exit 1
+          fi
+          ls app/build/outputs/apk/release/
+
+      # 安装签名工具
       - name: Install android tools
         run: |
           sudo apt-get update
@@ -38,12 +47,13 @@ jobs:
           cd app/build/outputs/apk/release/
           echo "$APK_RELEASE_KEY_BASE64" | base64 -d > release-key.jks
           zipalign -v -p 4 app-release-unsigned.apk app-release-unsigned-aligned.apk
-          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-${{ github.ref_name }}.apk" app-release-unsigned-aligned.apk
+          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-$REF_NAME.apk" app-release-unsigned-aligned.apk
         env:
           APK_RELEASE_KEY_BASE64: ${{ secrets.APK_RELEASE_KEY_BASE64 }}
           APK_RELEASE_KEY_PASSWORD: ${{ secrets.APK_RELEASE_KEY_PASSWORD }}
+          REF_NAME: ${{ github.ref_name }}
 
-      # 发布签名的 APK
+      # 上传 APK 到 Release 页面
       - name: Release APK
         uses: softprops/action-gh-release@v2
         with:
