--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build and Release APK
 on:
   push:
     tags:
-      - "*" # 当推送 Tag 时触发工作流
-  workflow_dispatch: # 手动触发工作流
+      - "*"  # 每次推送带有标签的代码时触发
+  workflow_dispatch: # 手动触发
 
 jobs:
   build:
@@ -22,20 +22,17 @@ jobs:
           java-version: "17"
           cache: "gradle"
 
-      # 构建 APK
+      # 构建未签名的 APK
       - name: Build APK
         run: ./gradlew assembleRelease --no-daemon
 
-      # 检查 APK 路径是否存在
-      - name: Check APK Path
+      # 确保输出目录存在，并检查文件是否生成
+      - name: Check APK output directory
         run: |
-          if [ ! -d "app/build/outputs/apk/release/" ]; then
-            echo "Release directory does not exist!"
-            exit 1
-          fi
-          ls app/build/outputs/apk/release/
+          echo "Checking APK output directory..."
+          ls -R app/build/outputs/apk/
 
-      # 安装签名工具
+      # 安装工具 (zipalign 和 apksigner)
       - name: Install android tools
         run: |
           sudo apt-get update
@@ -47,13 +44,12 @@ jobs:
           cd app/build/outputs/apk/release/
           echo "$APK_RELEASE_KEY_BASE64" | base64 -d > release-key.jks
           zipalign -v -p 4 app-release-unsigned.apk app-release-unsigned-aligned.apk
-          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-$REF_NAME.apk" app-release-unsigned-aligned.apk
+          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-${{ github.ref_name }}.apk" app-release-unsigned-aligned.apk
         env:
           APK_RELEASE_KEY_BASE64: ${{ secrets.APK_RELEASE_KEY_BASE64 }}
           APK_RELEASE_KEY_PASSWORD: ${{ secrets.APK_RELEASE_KEY_PASSWORD }}
-          REF_NAME: ${{ github.ref_name }}
 
-      # 上传 APK 到 Release 页面
+      # 发布签名的 APK
       - name: Release APK
         uses: softprops/action-gh-release@v2
         with:
