--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,15 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleRelease --no-daemon
 
-      # 检查输出目录并列出文件
-      - name: Check build output directory
+      # 确认生成的 APK 文件是否存在
+      - name: Check if APK file exists
         run: |
-          echo "Checking the entire build output directory..."
-          ls -R app/build/outputs/
+          if [ -f app/build/outputs/apk/full/release/app-full-release-unsigned.apk ]; then
+            echo "APK file found!"
+          else
+            echo "APK file not found!"
+            exit 1
+          fi
 
       # 安装工具 (zipalign 和 apksigner)
       - name: Install android tools
@@ -38,21 +42,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install zipalign apksigner
 
-      # 确保 APK 文件存在
-      - name: Ensure APK exists before signing
-        run: |
-          if [ ! -f app/build/outputs/apk/release/app-release-unsigned.apk ]; then
-            echo "APK file not found!"
-            exit 1
-          fi
-
       # 签名 APK
       - name: Sign APK
         run: |
-          cd app/build/outputs/apk/release/
+          cd app/build/outputs/apk/full/release/
           echo "$APK_RELEASE_KEY_BASE64" | base64 -d > release-key.jks
-          zipalign -v -p 4 app-release-unsigned.apk app-release-unsigned-aligned.apk
-          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-${{ github.ref_name }}.apk" app-release-unsigned-aligned.apk
+          zipalign -v -p 4 app-full-release-unsigned.apk app-full-release-unsigned-aligned.apk
+          apksigner sign --ks release-key.jks --ks-pass pass:"$APK_RELEASE_KEY_PASSWORD" --out "aaps-${{ github.ref_name }}.apk" app-full-release-unsigned-aligned.apk
         env:
           APK_RELEASE_KEY_BASE64: ${{ secrets.APK_RELEASE_KEY_BASE64 }}
           APK_RELEASE_KEY_PASSWORD: ${{ secrets.APK_RELEASE_KEY_PASSWORD }}
@@ -61,4 +57,4 @@ jobs:
       - name: Release APK
         uses: softprops/action-gh-release@v2
         with:
-          files: app/build/outputs/apk/release/aaps-${{ github.ref_name }}.apk
+          files: app/build/outputs/apk/full/release/aaps-${{ github.ref_name }}.apk
