--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Create and push Git tag
         run: |
           VERSION="v${{ github.run_number }}-${{ github.ref_name }}"
+          echo "Creating tag: $VERSION"
           git tag $VERSION
           git push origin $VERSION
           echo "Tag $VERSION created and pushed"
