--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,13 +56,17 @@ jobs:
       # 如果没有标签，手动创建并推送标签
       - name: Create and push Git tag
         run: |
+          # 检查是否存在标签
           if [[ -z "${GITHUB_REF##refs/tags/*}" ]]; then
             echo "Tag exists, skipping creation."
           else
             echo "No tag found. Creating a new tag."
-            git tag "v${{ github.run_number }}-${{ github.ref_name }}"
-            git push origin "v${{ github.run_number }}-${{ github.ref_name }}"
+            NEW_TAG="v${{ github.run_number }}-${{ github.ref_name }}"  # 定义标签名称
+            git tag $NEW_TAG
+            git push origin $NEW_TAG
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # 发布签名的 APK
       - name: Release APK
