--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Build and Release APK
 
 on:
@@ -69,6 +70,13 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 调试步骤，确保标签推送成功
+      - name: Debugging: Show Git Tags
+        run: |
+          git fetch --tags  # 拉取远程标签
+          git tag           # 列出本地标签
+          git log --oneline # 查看提交历史，确认标签是否存在
 
       # 发布签名的 APK
       - name: Release APK
