--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Fetch all tags
         run: |
           git fetch --tags
+          git tag  # 打印当前仓库标签，检查是否存在
 
       # 发布签名的 APK 文件到 GitHub Releases
       - name: Release APK
